--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,9 @@ importlib_metadata==8.5.0
 Jinja2==3.1.4
 jiter==0.5.0
 llvmlite==0.43.0
-Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
 more-itertools==10.5.0
 mpmath==1.3.0
 networkx==3.3
@@ -50,8 +51,10 @@ pillow==10.4.0
 platformdirs==4.3.6
 pydantic==2.9.2
 pydantic_core==2.23.4
+Pygments==2.18.0
 regex==2024.9.11
 requests==2.32.3
+rich==13.8.1
 sniffio==1.3.1
 sympy==1.13.2
 tiktoken==0.7.0
