--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ fsspec==2024.9.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.2
+huggingface-hub==0.25.1
 idna==3.10
 importlib_metadata==8.5.0
 Jinja2==3.1.4
@@ -36,23 +37,29 @@ nvidia-nvjitlink-cu12==12.6.68
 nvidia-nvtx-cu12==12.1.105
 openai==1.46.0
 openai-whisper==20231117
+packaging==24.1
 pillow==10.4.0
 platformdirs==4.3.6
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
+PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
 rich==13.8.1
+safetensors==0.4.5
+sentencepiece==0.2.0
 sniffio==1.3.1
 sympy==1.13.2
 tbb==2021.13.1
 tiktoken==0.7.0
+tokenizers==0.20.0
 tomli==2.0.1
 torch==2.3.1
 torchaudio==2.3.1
 torchvision==0.18.1
 tqdm==4.66.5
+transformers==4.45.1
 triton==2.3.1
 typing_extensions==4.12.2
 urllib3==2.2.3
