Ajuste na descrição dos parâmetros

--- a/params.ini
+++ b/params.ini
@@ -2,24 +2,34 @@
 ; Quantidade de legendas por bloco que será enviado para tradução
 ; Blocos grandes podem gerar retornos equivocados do timestamp
 chunk_size=40
+
 ; Limite adicional de legendas se não houver um bloco com pontuação final
 chunk_offset=10
+
 ; Tipo de codificação do arquivo de legendas
 encoding_type=utf-8
+
 ; Limite de palavras por linha para a divisão em duas ou mais linhas
 words_line_limit=10
-; Limite de palavras por linha utilizado na transcrição
+
+; Limite de palavras por linha ao realizar a transcrição
 max_words_line=24
-; Tamanho máximo de caracteres por linha utilizado na transcrição
+
+; Tamanho máximo de caracteres por linha ao realizar a transcrição
 max_line_width=80
-; Quantidade máxima de linhas utilizaa na transcrição
+
+; Quantidade máxima de linhas ao realizar a transcrição
 max_line_count=1
-; Limite de palavras para a busca de palavras com pontuação final
+
+; Quantidade de palavras para a busca em sentenças com pontuação final
 ; Valores altos podem afetar a precisão do timestamp
-words_split=5
+words_split=4
+
 ; Temperatura utilizada pelo modelo na tradução
 gpt_temperature=0.5
+
 ; Modelo utilizado na tradução
 gpt_model=gpt-4o-mini
+
 ; Modelo utilizado na transcrição
-whisper_model=large-v3-turbo
+whisper_model=turbo
