Ajusta algumas configurações para melhorar a tradução

--- a/params.ini
+++ b/params.ini
@@ -10,7 +10,7 @@ chunk_offset=10
 encoding_type=utf-8
 
 ; Limite de palavras por linha para a divisão em duas ou mais linhas
-words_line_limit=10
+words_line_limit=12
 
 ; Limite de palavras por linha ao realizar a transcrição
 max_words_line=24
@@ -23,7 +23,7 @@ max_line_count=1
 
 ; Quantidade de palavras para a busca em sentenças com pontuação final
 ; Valores altos podem afetar a precisão do timestamp
-words_split=4
+words_split=3
 
 ; Temperatura utilizada pelo modelo na tradução
 gpt_temperature=0.5
@@ -32,4 +32,7 @@ gpt_temperature=0.5
 gpt_model=gpt-4o-mini
 
 ; Modelo utilizado na transcrição
-whisper_model=turbo
+whisper_model=large-v3-turbo
+
+; Idioma de origem utilizado na transcricao
+whisper_language=en
