Adiciona novos ajustes na função de pontuação

--- a/params.ini
+++ b/params.ini
@@ -1,38 +1,36 @@
 [DEFAULT]
-; Quantidade de legendas por bloco que será enviado para tradução
-; Blocos grandes podem gerar retornos equivocados do timestamp
-chunk_size=40
+; Quantidade de legendas por bloco que será enviada para tradução
+chunk_size=20
 
-; Limite adicional de legendas se não houver um bloco com pontuação final
-chunk_offset=10
+; Limite adicional de legendas caso o bloco não contenha uma pontuação final
+chunk_offset=1
 
 ; Tipo de codificação do arquivo de legendas
 encoding_type=utf-8
 
-; Limite de palavras por linha para a divisão em duas ou mais linhas
-words_line_limit=12
+; Limite máximo de palavras por linha para a divisão em duas ou mais linhas
+words_line_limit=14
 
-; Limite de palavras por linha ao realizar a transcrição
-max_words_line=24
+; Número mínimo de palavras que um segmento de texto deve conter
+min_words_segment=12
 
-; Tamanho máximo de caracteres por linha ao realizar a transcrição
+; Número máximo de palavras para busca de sinais de pontuação no segmento
+max_threshold_words=4
+
+; Quantidade máxima de caracteres permitidos por linha durante a transcrição
 max_line_width=80
 
-; Quantidade máxima de linhas ao realizar a transcrição
+; Número máximo de linhas permitidas durante a transcrição
 max_line_count=1
 
-; Quantidade de palavras para a busca em sentenças com pontuação final
-; Valores altos podem afetar a precisão do timestamp
-words_split=1
+; Temperatura utilizada pelo modelo de tradução
+gpt_temperature=0.3
 
-; Temperatura utilizada pelo modelo na tradução
-gpt_temperature=0.5
-
-; Modelo utilizado na tradução
+; Modelo utilizado para tradução
 gpt_model=gpt-4o-mini
 
-; Modelo utilizado na transcrição
+; Modelo utilizado para transcrição
 whisper_model=large-v3-turbo
 
-; Idioma de origem utilizado na transcricao
+; Idioma de origem utilizado na transcrição
 whisper_language=en
