--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+accelerate==1.0.1
 annotated-types==0.7.0
 anyio==4.4.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 distro==1.9.0
 exceptiongroup==1.2.2
@@ -10,10 +12,12 @@ h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.2
 huggingface-hub==0.25.1
+HyperPyYAML==1.2.2
 idna==3.10
 importlib_metadata==8.5.0
 Jinja2==3.1.4
 jiter==0.5.0
+joblib==1.4.2
 llvmlite==0.43.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -40,6 +44,8 @@ openai-whisper==20240930
 packaging==24.1
 pillow==10.4.0
 platformdirs==4.3.6
+psutil==6.1.0
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
@@ -47,7 +53,10 @@ PyYAML==6.0.2
 regex==2024.9.11
 requests==2.32.3
 rich==13.8.1
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.12
 safetensors==0.4.5
+scipy==1.14.1
 sentencepiece==0.2.0
 sniffio==1.3.1
 sympy==1.13.2
